Rework JSON Loading
This was all so I could start thinking about mutation loading using the
same system.

On a side note, this core library is already getting pretty big...

--- a/config/agricraft/manifest.json
+++ b/config/agricraft/manifest.json
@@ -1,14 +1,14 @@
 {
-  "groups": {
-    "vanilla": {
-      "name": "vanilla",
+  "elements": [
+    {
+      "type": "group",
       "path": "vanilla/vanilla_group.json",
       "enabled": true
     },
-    "resource": {
-      "name": "resource",
+    {
+      "type": "group",
       "path": "resource/resource_group.json",
       "enabled": false
     }
-  }
+  ]
 }
