--- a/config/agricraft/agricraft.config
+++ b/config/agricraft/agricraft.config
@@ -1,7 +1,10 @@
 #AgriCore Configuration File
-#Tue Jun 14 20:17:53 MDT 2016
+#Tue Jun 28 18:27:26 MDT 2016
+agricore_log=true
+agricore_log_debug=true
 is_true=true
 the_string=The quick brown fox jumps over the lazy dog.
 the_float=-1.25
+agricore_log_info=true
 the_double=3.141592653589793
 the_int=5
