--- a/build.gradle
+++ b/build.gradle
@@ -9,5 +9,6 @@ repositories {
 
 dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
+	compile 'org.reflections:reflections:0.9.10'
     testCompile 'junit:junit:4.12'
 }
