--- a/config/agricraft/agricraft.config
+++ b/config/agricraft/agricraft.config
@@ -1,10 +1,11 @@
 #AgriCore Configuration File
-#Tue Jun 28 18:27:26 MDT 2016
-agricore_log=true
+#Wed Jul 13 19:50:43 MDT 2016
 agricore_log_debug=true
 is_true=true
+agricore_log=true
+agricore_log_info=true
 the_string=The quick brown fox jumps over the lazy dog.
 the_float=-1.25
-agricore_log_info=true
-the_double=3.141592653589793
 the_int=5
+the_double=3.141592653589793
+agricore_logging=true
