Remove Dependency Shading
It was messing up the AgriCraft distribution compile.

--- a/build.gradle
+++ b/build.gradle
@@ -7,21 +7,8 @@ repositories {
     mavenCentral()
 }
 
-configurations {
-	shade
-	compile.extendsFrom shade
-}
-
 dependencies {
-	shade 'org.reflections:reflections:0.9.10'
-	shade 'com.google.code.gson:gson:2.6.2'
-    testCompile 'junit:junit:4.12'
-}
-
-jar {
-    configurations.shade.copyRecursive().setTransitive(false).each { artifact ->
-		from (zipTree(artifact)) {
-			exclude 'META-INF', 'META-INF/**'
-		}
-	}
+	compile 'org.reflections:reflections:0.9.10'
+	compile 'com.google.code.gson:gson:2.6.2'
+  testCompile 'junit:junit:4.12'
 }
