Fix Travis Builds
I'm guessing that we will want to convert over to GitHub actions soon.

- Fix: Switch from OracleJDK to superior OpenJDK.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,12 @@ gradle.properties
 .nb-gradle
 nbproject
 
+# VSCode
+.vscode
+.classpath
+.project
+.settings
+
 # Locally stored "Eclipse launch configurations"
 *.launch
 
