--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,3 +36,7 @@ jobs:
       run: ./gradlew build
     - name: Test with Gradle
       run: ./gradlew test
+    - name: Publish Code Coverage Report
+      run: bash <(curl -s https://codecov.io/bash)
+    - name: JUnit Report
+      uses: mikepenz/action-junit-report@v1.2.1
