--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ repositories {
 }
 
 dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.31'
+    compileOnly 'org.slf4j:slf4j-api:1.7.31'
 	implementation 'org.reflections:reflections:0.9.10'
 	implementation 'com.google.code.gson:gson:2.6.2'
     testImplementation 'junit:junit:4.12'
