--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,10 @@ repositories {
 
 dependencies {
     compileOnly 'org.slf4j:slf4j-api:1.7.31'
-	implementation 'org.reflections:reflections:0.9.10'
-	implementation 'com.google.code.gson:gson:2.8.9'
-    testImplementation 'junit:junit:4.12'
+    compileOnly 'com.google.guava:guava:31.1-jre'
+	implementation 'org.reflections:reflections:0.10.2'
+	implementation 'com.google.code.gson:gson:2.8.9'    // Must be identical as version used by minecraft
+    testImplementation 'junit:junit:4.13.2'             // GSON dependency, must be correct version as well
 }
 
 test {
