--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@ plugins {
     id 'jacoco'
 }
 
-sourceCompatibility = '1.8'
+java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 repositories {
